--- a/src/main/resources/templates/connect/facebookConnected.html
+++ b/src/main/resources/templates/connect/facebookConnected.html
@@ -7,7 +7,7 @@
 		
 		<p>
 			You are now connected to your Facebook account.
-			Click <a href="/login.html">here</a> to see some entries from your Facebook feed.
+			Click <a href="/hello.html">here</a> to see some entries from your Facebook feed.
 		</p>		
 	</body>
 </html>
